cabal-version:      2.4
name:               ledger-bridge
version:            0.1.0.0

author:             ErgoLabs
maintainer:         

extra-source-files: CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ergolabs/cardano-dex-backend

common base
  build-depends: base >= 4.9 && < 5

common project-config
  default-language:     Haskell2010

  default-extensions:   OverloadedStrings
                        DeriveAnyClass
                        BangPatterns
                        BinaryLiterals
                        ConstraintKinds
                        DataKinds
                        DefaultSignatures
                        DeriveDataTypeable
                        DeriveFoldable
                        DeriveFunctor
                        DeriveGeneric
                        DeriveTraversable
                        DoAndIfThenElse
                        EmptyDataDecls
                        ExistentialQuantification
                        FlexibleContexts
                        FlexibleInstances
                        FunctionalDependencies
                        GADTs
                        GeneralizedNewtypeDeriving
                        InstanceSigs
                        KindSignatures
                        LambdaCase
                        MultiParamTypeClasses
                        MultiWayIf
                        NamedFieldPuns
                        PartialTypeSignatures
                        PatternGuards
                        PolyKinds
                        RankNTypes
                        RecordWildCards
                        ScopedTypeVariables
                        StandaloneDeriving
                        TupleSections
                        TypeApplications
                        TypeFamilies
                        TypeSynonymInstances
                        ViewPatterns

  ghc-options:          -O2
                        -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages
                        -Widentities
                        -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

library
    import: base, project-config

    hs-source-dirs: src
    
    exposed-modules: Spectrum.LedgerBridge
                     Spectrum.LedgerBridge.Protocol.Client
                     Spectrum.LedgerBridge.Protocol.ChainSync
                     Spectrum.LedgerBridge.Protocol.Data.ChainSync
                     Cardano.Network.Protocol.NodeToClient.Trace

    build-depends:  streaming-kafka
                  , bytestring
                  , aeson
                  , rio
                  , bytestring
                  , containers == 0.6.2.1
                  , stm == 2.5.0.1
                  , text == 1.2.5.0
                  , streamly == 0.8.0
                  , plutus-ledger-api -any
                  , plutus-tx -any
                  , hw-kafka-client
                  , dex-core == 0.1.0.0
                  , hashable == 1.3.0.0
                  , servant
                  , servant-server
                  , wai
                  , warp
                  , utf8-string
                  , quickblue
                  , dhall
                  , playground-common
                  , transformers
                  , unliftio-core
                  , io-classes == 0.2.0.0
                  , resourcet
                  , exceptions
                  , core == 0.1.0.0
                  , hlog
                  , rocksdb-haskell == 0.1.0.0
                  , base16
                  , base58-bytestring
                  , base64
                  , bech32
                  , cborg
                  , bytestring
                  , contra-tracer
                  , cardano-api
                  , cardano-binary
                  , cardano-crypto
                  , cardano-crypto-class
                  , cardano-crypto-wrapper
                  , cardano-ledger-alonzo
                  , cardano-ledger-byron
                  , cardano-ledger-core
                  , cardano-ledger-shelley
                  , cardano-ledger-shelley-ma
                  , cardano-protocol-tpraos
                  , cardano-slotting
                  , ouroboros-consensus
                  , ouroboros-consensus-byron
                  , ouroboros-consensus-cardano
                  , ouroboros-consensus-shelley
                  , ouroboros-network
                  , ouroboros-network-framework
                  , typed-protocols
                  , typed-protocols-cborg
                  , network-mux
                  , iohk-monitoring == 0.2.0.0

