cabal-version:      2.4
name:               ledger-sync
version:            0.1.0.0

author:             ErgoLabs
maintainer:         

extra-source-files: CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ergolabs/cardano-dex-backend

common base
  build-depends: base >= 4.9 && < 5

common project-config
  default-language:     Haskell2010

  default-extensions:   OverloadedStrings
                        DeriveAnyClass
                        BangPatterns
                        BinaryLiterals
                        ConstraintKinds
                        DataKinds
                        DefaultSignatures
                        DeriveDataTypeable
                        DeriveFoldable
                        DeriveFunctor
                        DeriveGeneric
                        DeriveTraversable
                        DerivingStrategies
                        DoAndIfThenElse
                        EmptyDataDecls
                        ExistentialQuantification
                        FlexibleContexts
                        FlexibleInstances
                        FunctionalDependencies
                        GADTs
                        GeneralizedNewtypeDeriving
                        InstanceSigs
                        KindSignatures
                        LambdaCase
                        MultiParamTypeClasses
                        MultiWayIf
                        NamedFieldPuns
                        PartialTypeSignatures
                        PatternGuards
                        PolyKinds
                        RankNTypes
                        RecordWildCards
                        ScopedTypeVariables
                        StandaloneDeriving
                        TupleSections
                        TypeApplications
                        TypeFamilies
                        TypeSynonymInstances
                        ViewPatterns

  ghc-options:          -O2
                        -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages
                        -Widentities
                        -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

library
    import: base, project-config

    hs-source-dirs: src
    
    exposed-modules: Spectrum.Context
                     Spectrum.HigherKind
                     Spectrum.Prelude
                     Spectrum.LedgerSync
                     Spectrum.LedgerSync.Config
                     Spectrum.LedgerSync.Types
                     Spectrum.LedgerSync.Exception
                     Spectrum.LedgerSync.Data.LedgerUpdate
                     Spectrum.LedgerSync.Protocol.Client
                     Spectrum.LedgerSync.Protocol.ChainSync
                     Spectrum.LedgerSync.Protocol.Data.ChainSync
                     Cardano.Network.Protocol.NodeToClient.Trace

    build-depends:  bytestring
                  , aeson
                  , lens-aeson
                  , rio
                  , bytestring
                  , generic-lens == 2.2.0.0
                  , containers == 0.6.2.1
                  , stm == 2.5.0.1
                  , text == 1.2.5.0
                  , dex-core == 0.1.0.0
                  , hashable == 1.3.0.0
                  , utf8-string
                  , time
                  , dhall
                  , yaml
                  , transformers
                  , unliftio-core
                  , io-classes == 0.2.0.0
                  , resourcet
                  , exceptions
                  , profunctors
                  , core == 0.1.0.0
                  , base16
                  , base58-bytestring
                  , base64
                  , bech32
                  , cborg
                  , bytestring
                  , contra-tracer
                  , cardano-api
                  , cardano-binary
                  , cardano-crypto
                  , cardano-crypto-class
                  , cardano-crypto-wrapper
                  , cardano-ledger-alonzo
                  , cardano-ledger-byron
                  , cardano-ledger-core
                  , cardano-ledger-shelley
                  , cardano-ledger-shelley-ma
                  , cardano-protocol-tpraos
                  , cardano-slotting
                  , ouroboros-consensus
                  , ouroboros-consensus-byron
                  , ouroboros-consensus-cardano
                  , ouroboros-consensus-shelley
                  , ouroboros-network
                  , ouroboros-network-framework
                  , typed-protocols
                  , typed-protocols-cborg
                  , network-mux
                  , iohk-monitoring == 0.2.0.0
                  , hlog
