cabal-version:      2.4
name:               pools-resolver
version:            0.1.0.0

author:             ErgoLabs
maintainer:         

extra-source-files: CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ergolabs/cardano-dex-backend

common base
  build-depends: base >= 4.9 && < 5

common project-config
  default-language:     Haskell2010

  default-extensions:   OverloadedStrings
                        DeriveAnyClass
                        BangPatterns
                        BinaryLiterals
                        ConstraintKinds
                        DataKinds
                        DefaultSignatures
                        DeriveDataTypeable
                        DeriveFoldable
                        DeriveFunctor
                        DeriveGeneric
                        DeriveTraversable
                        DoAndIfThenElse
                        EmptyDataDecls
                        ExistentialQuantification
                        FlexibleContexts
                        FlexibleInstances
                        FunctionalDependencies
                        GADTs
                        GeneralizedNewtypeDeriving
                        InstanceSigs
                        KindSignatures
                        LambdaCase
                        MultiParamTypeClasses
                        MultiWayIf
                        NamedFieldPuns
                        PartialTypeSignatures
                        PatternGuards
                        PolyKinds
                        RankNTypes
                        RecordWildCards
                        ScopedTypeVariables
                        StandaloneDeriving
                        TupleSections
                        TypeApplications
                        TypeFamilies
                        TypeSynonymInstances
                        ViewPatterns

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages
                        -Widentities
                        -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

library
    import: base, project-config

    hs-source-dirs: src
    
    exposed-modules: Resolver.Settings
                     Resolver.Endpoints.HttpServer
                     Resolver.Program.Resolver
                     Resolver.Repositories.PoolRepository
                     Resolver.Services.PoolResolver
                     Resolver.AppWiring
                     Resolver

    build-depends:  streaming-kafka
                  , bytestring
                  , aeson
                  , rio
                  , bytestring
                  , text == 1.2.5.0
                  , streamly == 0.8.0
                  , plutus-ledger-api -any
                  , plutus-tx -any
                  , hw-kafka-client
                  , dex-core == 0.1.0.0
                  , hashable == 1.3.0.0
                  , servant
                  , servant-server
                  , wai
                  , warp
                  , hedis
                  , utf8-string
                  , cardano-tx
                  , quickblue
                  , dhall
                  , playground-common
                  , transformers
                  , unliftio-core
                  , resourcet
                  , exceptions
                  , core == 0.1.0.0
                  , hlog
                  , rocksdb-haskell-jprupp == 2.1.3
                  , data-default == 0.7.1.1

executable pools-resolver-app
    default-language: Haskell2010
    hs-source-dirs:   app
    main-is:          Main.hs

    ghc-options:      -O2
                      -threaded

    build-depends:    base >= 4.9 && < 5
                    , pools-resolver
                    , rio
