cabal-version:      2.4
name:               tracker
version:            0.1.0.0

author:             ErgoLabs
maintainer:         

extra-source-files: CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ergolabs/cardano-dex-backend

common base
  build-depends: base >= 4.9 && < 5

common project-config
  default-language:     Haskell2010

  default-extensions:   OverloadedStrings
                        DeriveAnyClass
                        BangPatterns
                        BinaryLiterals
                        ConstraintKinds
                        DataKinds
                        DefaultSignatures
                        DeriveDataTypeable
                        DeriveFoldable
                        DeriveFunctor
                        DeriveGeneric
                        DeriveTraversable
                        DoAndIfThenElse
                        EmptyDataDecls
                        ExistentialQuantification
                        FlexibleContexts
                        FlexibleInstances
                        FunctionalDependencies
                        GADTs
                        GeneralizedNewtypeDeriving
                        InstanceSigs
                        KindSignatures
                        LambdaCase
                        MultiParamTypeClasses
                        MultiWayIf
                        NamedFieldPuns
                        NoImplicitPrelude
                        PartialTypeSignatures
                        PatternGuards
                        PolyKinds
                        RankNTypes
                        RecordWildCards
                        ScopedTypeVariables
                        StandaloneDeriving
                        TupleSections
                        TypeFamilies
                        TypeSynonymInstances
                        ViewPatterns

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages
                        -Widentities
                        -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

library
    import: base, project-config

    hs-source-dirs: src
    
    exposed-modules: Tracker.App
                     Tracker.Programs.TrackerProgram
                     Tracker.Services.ExplorerService
                     Tracker.Services.KafkaService 
                     Tracker.Services.SettingsReader
                     Tracker.Clients.ExplorerClient
                     Tracker.Models.AppSettings
                     Tracker.Utils

    build-depends:
        streaming-kafka == 0.1.0.0,
        core == 0.1.0.0,
        bytestring,
        aeson,
        rio,
        text,
        bytestring,
        parallel-io,
        loop,
        stm,
        streamly,
        req,
        conduit,
        data-default-class,
        req-conduit,
        conduit-extra,
        modern-uri,
        plutus-ledger-api -any,
        hw-kafka-client,
        sdk,
        dhall,
        http-conduit,
        yaml,
        plutus-tx,
        plutus-ledger

executable tracker-app
    main-is: Main.hs
    build-depends: 
        base >= 4.9 && < 5,
        tracker,
        rio
    hs-source-dirs:   app
    default-language: Haskell2010