cabal-version:      2.4
name:               tracker
version:            0.1.0.0

author:             ErgoLabs
maintainer:         

extra-source-files: CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ergolabs/cardano-dex-backend

common base
  build-depends: base >= 4.9 && < 5

common project-config
  default-language:     Haskell2010

  default-extensions:   OverloadedStrings
                        DeriveAnyClass
                        BangPatterns
                        BinaryLiterals
                        ConstraintKinds
                        DataKinds
                        DefaultSignatures
                        DeriveDataTypeable
                        DeriveFoldable
                        DeriveFunctor
                        DeriveGeneric
                        DeriveTraversable
                        DoAndIfThenElse
                        EmptyDataDecls
                        ExistentialQuantification
                        FlexibleContexts
                        FlexibleInstances
                        FunctionalDependencies
                        GADTs
                        GeneralizedNewtypeDeriving
                        InstanceSigs
                        KindSignatures
                        LambdaCase
                        MultiParamTypeClasses
                        MultiWayIf
                        NamedFieldPuns
                        NoImplicitPrelude
                        PartialTypeSignatures
                        OverloadedStrings
                        PatternGuards
                        PolyKinds
                        RankNTypes
                        RecordWildCards
                        ScopedTypeVariables
                        StandaloneDeriving
                        TupleSections
                        TypeFamilies
                        TypeSynonymInstances
                        TypeApplications
                        ViewPatterns

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages
                        -Widentities
                        -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

library
    import: base, project-config

    hs-source-dirs: src
    
    exposed-modules: Tracker.App
                     Tracker.Programs.TrackerProgram
                     Tracker.Services.TrackerService 
                     Tracker.Services.ConfigReader
                     Tracker.Caches.TrackerCache
                     Tracker.Models.AppConfig

    build-depends:  hashable
                  , streaming-kafka
                  , cardano-tx
                  , dex-core
                  , quickblue
                  , exceptions
                  , resourcet
                  , unliftio-core
                  , transformers
                  , hedis
                  , utf8-string
                  , bytestring
                  , rio
                  , text
                  , bytestring
                  , streamly
                  , plutus-ledger-api -any
                  , hw-kafka-client
                  , dhall
                  , plutus-tx
                  , plutus-ledger
                  , hlog
                  , retry
                  , rocksdb-haskell == 0.1.0.0

executable tracker-app
    main-is: Main.hs
    build-depends:  base >= 4.9 && < 5
                  , tracker
                  , rio
    hs-source-dirs:   app
    default-language: Haskell2010